# kitkat-multiverse

./: .gitignore  LICENSE.md  README.md
starkat/sharpkat/: CMakeLists.txt  README.md  entry.cpp  entry.h  library.cpp
starkat/sharpkat/api/: il2cpp_functions.cpp  il2cpp_functions.h
starkat/sharpkat/dumper/: assembly.cpp  assembly.h  class.cpp  class.h  domain.cpp  domain.h  fields.cpp  fields.h  methods.cpp  methods.h
starkat/sharpkat/util/: logger.cpp  logger.h  mem.cpp  mem.h
